--- a/index.html
+++ b/index.html
@@ -3,9 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Piano</title>
+    <title>Piano Simulator</title>
+    <!-- Styles -->
+    <link rel="stylesheet" href="./src/style/reset.css">
+    <link rel="stylesheet" href="./src/style/main.css">
+    <!-- font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Roboto+Slab:wght@100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <!-- Styles -->
 </head>
 <body>
-    
+    <div class="container">
+        <header>
+            <h2>Piano Virtual</h2>
+            <div class="column volume-slider"> <input type="range">
+                <span>Volume</span>
+            </div>
+            <div class="column keys-check">
+                <span>Teclas</span> <input type="checkbox" checked>
+            </div>
+        </header>
+        <ul class="piano-keys">
+            <li class="key white"><span>a</span></li>
+            <li class="key black"><span>w</span></li>
+            <li class="key white"><span>s</span></li>
+            <li class="key black"><span>e</span></li>
+            <li class="key white"><span>d</span></li>
+            <li class="key black"><span>f</span></li>
+            <li class="key white"><span>t</span></li>
+            <li class="key black"><span>g</span></li>
+            <li class="key white"><span>y</span></li>
+            <li class="key black"><span>h</span></li>
+            <li class="key white"><span>u</span></li>
+            <li class="key black"><span>j</span></li>
+            <li class="key white"><span>k</span></li>
+            <li class="key black"><span>o</span></li>
+            <li class="key white"><span>l</span></li>
+            <li class="key black"><span>p</span></li>
+            <li class="key white"><span>;</span></li>
+        </ul>
+    </div>
+    <script src="./src/scripts/engine.js" defer></script>
 </body>
 </html>
